Replace deprecated readFileToString by readString